alignment fix

--- a/src/client/scss/_mobile.scss
+++ b/src/client/scss/_mobile.scss
@@ -13,7 +13,7 @@
     }
 
     .small {
-        font-size: 1rem;
+        font-size: 2rem;
     }
 
     .text {
@@ -26,4 +26,8 @@
         margin-left: 0.2rem;
         margin-right: 0.2rem;
     }
+
+	#icon {
+		width: 100% !important;
+	}
 }
